--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "ngrok": "^5.0.0-beta.2",
     "open": "^10.1.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.27.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jorgeguto87/serasabot.git"
+  },
+  "keywords": [],
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/jorgeguto87/serasabot/issues"
+  },
+  "homepage": "https://github.com/jorgeguto87/serasabot#readme"
 }
